# ccom

./: .gitignore  .ycm_extra_conf.py  README.md  meson.build
include/ccom/: composition.hpp  compositor.hpp  draw_loop_manager.hpp  draw_manager.hpp  geometry.hpp  object.hpp  rasterizer.hpp  util.hpp
include/ccom/objects/: point.hpp  rectangle.hpp  triangle.hpp
sh3/: build.sh3
src/: compositor.cpp  draw_loop_manager.cpp  draw_manager.cpp  geometry.cpp  main.cpp  rasterizer.cpp
src/objects/: point.cpp  rectangle.cpp  triangle.cpp
